src/app/app.component.css
header {
  background-color: #393e46;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
  height: 18vh;
  align-items: center;
  padding: 0 1em;
}
header > h1 {
  margin: 0;
  color: azure;
}
header > form {
  display: grid;
  grid-template-columns: 2fr 1fr;
  grid-gap: 1em;
}
header > form > input,
button {
  border: 0.05em #00adb5 solid;
  border-radius: 0.15em;
  font-size: medium;
  text-transform: lowercase;
}
header > form > input {
  background-color: #ececec;
  height: 3em;
}
header > form > input:focus,
button:focus {
  outline: none;
}
header > form > button:hover {
  background-color: #5bedf5;
}
header > form > button {
  background-color: #25e1eb;
  font-weight: bold;
  font-size: large;
}
main {
  height: 82vh;
  background-color: #ffffff;
  display: grid;
  grid-template-columns: 1fr 4fr;
  padding: 0;
  margin: 0;
}
.movies-list {
  background-color: #f0f0f0;
  padding-top: 1em;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  width: 100%;
}
.movie-description {
  padding: 1px;
  margin: 0;
  background-color: #ffffff;
}
.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  border-radius: 0.5em;
  padding: 1em;
  margin: 1em;
  background-color: white;
  width: 70%;
  cursor: pointer;
}
.card:hover {
  background-color: rgb(231, 250, 252);
}
.movie {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  width: 100%;
}
.short-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  width: 100%;
}
.short-info > div > * {
  margin-bottom: 0;
  margin-top: 0.25em;
}
.short-info > img {
  border-radius: 0.5em;
}
.short-overview {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 10em;
  margin: 0.25em 0 0 0;
  color: #727272;
}
.movie-description {
  padding-top: 2em;
  padding-right: 1em;
}
.content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  width: 100%;
}
.backdrop {
  width: 100%;
  height: auto;
  border-radius: 0.5em;
}
.poster {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
}
.poster-image {
  width: 50%;
  height: auto;
  border-radius: 0.5em;
}
.poster > div {
  padding: 1em;
}
.title {
  font-size: large;
  font-weight: bold;
  margin: 0em;
  padding-left: .25em;
}
.rating {
  font-size: medium;
  vertical-align: super;
}
.info {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
}
.descriptor {
  color: #727272;
}
.genres {
  font-size: small;
  font-weight: bold;
  margin: 0.5em 0 0 0;
}
.runtime {
  font-size: small;
  font-weight: bold;
  margin: 0;
}
.spoken-languages,
.release-date,
.status,
.adult {
  font-size: small;
  font-weight: 500;
  margin: 0;
}
.external {
  padding-top: 1em;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}
.imdb {
  text-decoration: none;
}
.more-info {
  text-decoration: none;
  color: #065fb3;
  font-size: medium;
  font-weight: lighter;
  padding-left: 1em;
}
.overview {
  font-size: small;
}
.budget {
  font-size: small;
  font-weight: 700;
}
.credits > h2 {
  margin: 0;
}
.credits,
.similar {
  margin: 0;
  width: 100%;
}
.cast,
.crew,
.similar-list {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  overflow-x: auto;
  justify-content: flex-start;
  align-items: center;
}
.credits,
.similar > h2 {
  font-size: large;
  font-weight: bold;
}
.profile {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  margin: 1em;
  background-color: white;
  padding: 0 0.25em;
  width: 6em;
  height: 13em;
}
.similar-movie {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  margin: 1em;
  background-color: white;
  padding: 0 0.25em;
  width: 14em;
  height: 28em;
  cursor: pointer;
}
.profile-picture,
.similar-poster {
  width: 100%;
  height: auto;
  border-radius: 0.5em;
  padding-top: 0.5em;
}
.name,
.character,
.job {
  margin: 0;
  font-size: small;
  font-weight: 500;
  text-align: center;
}
.similar-title {
  margin: 0;
  font-size: medium;
  font-weight: bold;
  text-align: center;
}
.character,
.job {
  color: #727272;
}
@media screen and (min-width: 480px) {
  header {
    height: 10vh;
  }
  main {
    height: 90vh;
  }
  .card {
    width: 90%;
  }
  .short-info {
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
  }
  .short-info > div {
    padding-left: 1em;
  }
  .short-info > div > h3 {
    font-size: large;
  }
  .short-info > div > p {
    font-size: medium;
  }
  .short-overview {
    font-size: small;
    width: 30em;
  }
  .external {
    justify-content: flex-start;
  }
  .content {
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    width: 100%;
  }
  .backdrop {
    width: 100%;
    height: 25rem;
    object-fit: cover;
  }
  .poster-image {
    width: auto;
    height: auto;
  }
  .title {
    font-size: 2rem;
  }
  .genres,
  .runtime,
  .spoken-languages,
  .release-date,
  .status,
  .adult {
    font-size: medium;
    padding-right: 5em;
  }
  .profile {
    width: 6em;
    height: 14em;
  }
  .similar-movie {
    width: 14em;
    height: 30em;
  }
}

